--- a/hue_api_v2_dmx.conf
+++ b/hue_api_v2_dmx.conf
@@ -38,7 +38,7 @@
 
 ###########################################################################
 
-# Responsiveness of the Hue bridge will slow down if you repeatedly send the on command, that's why we use 2 channels for the lamp
+# Responsiveness of the Hue bridge will slow down if you repeatedly send the on command, that's why we use 2 channels for the lamp.
 # "We can’t send commands to the lights too fast. If you stick to around 10 commands per second to the /light resource as maximum you should be fine.
 # For /grouped_light commands you should keep to a maximum of 1 per second. 
 # The REST API should not be used to send a continuous stream of fast light updates for an extended period of time,
