--- a/hue_api_v2_dmx.conf
+++ b/hue_api_v2_dmx.conf
@@ -48,7 +48,7 @@
 # Please visit: https://developers.meethue.com/develop/hue-api-v2/getting-started
 
 # Are the Hue plug detected as "resource/light/" or something else?
-# Duration not working? Needs further investigation
+# Duration not working? Needs further investigation. Should try this: '{"on":{"on":true},"dynamics":{"duration":${slot_value}}'
 
 
 # Configuration
