--- a/hue_api_v2_dmx.conf
+++ b/hue_api_v2_dmx.conf
@@ -49,6 +49,7 @@
 
 # Are the Hue plug detected as "resource/light/" or something else?
 # Duration not working? Needs further investigation. Should try this: '{"on":{"on":true},"dynamics":{"duration":${slot_value}}'
+# 1       140-255  +`curl '-s' '-o /dev/null' '-k' '-H' 'hue-application-key:${hue-application-key}' '-H' '"Accept: application/json"' '-X' 'PUT' '--data-raw' '{"on":{"on":true},"dynamics":{"duration":${slot_value}}' 'https://${hostname}/clip/v2/resource/light/${light_id}'`
 
 
 # Configuration
