--- a/hue_api_v2_dmx.conf
+++ b/hue_api_v2_dmx.conf
@@ -47,7 +47,6 @@
 # For information regarding generating Hue application keys and retrieve light ID numbers
 # Please visit: https://developers.meethue.com/develop/hue-api-v2/getting-started
 
-# Are the Hue plug detected as "resource/light/" or something else?
 # Duration not working? Needs further investigation. Should try this: '{"on":{"on":true},"dynamics":{"duration":${slot_value}}'
 # 1       140-255  +`curl '-s' '-o /dev/null' '-k' '-H' 'hue-application-key:${hue-application-key}' '-H' '"Accept: application/json"' '-X' 'PUT' '--data-raw' '{"on":{"on":true},"dynamics":{"duration":${slot_value}}' 'https://${hostname}/clip/v2/resource/light/${light_id}'`
 
@@ -59,7 +58,7 @@
 hostname='192.168.0.1'                                          # Hue bridge hostname or IP address
 hue-application-key='sFlEGnMAFXO6RtZV17aViNUB95G2uXWw64texDzD'  # Hue application key
 light_id='fc2daa74-0d44-4712-a373-e39a9c2b426d'                 # Light ID number (light service rid)
-plug_id='fc2daa74-0d44-4712-a373-e39a9c2b427d'                  # Power plug ID number (xxx service rid)
+plug_id='fc2daa74-0d44-4712-a373-e39a9c2b427d'                  # Power plug ID number
 duration='4'                                                    # Set the soft fade time from the light's current state to the new state. Default value is 4 (400 ms) Set 0 to disable
 scene1_id='1ae55391-cc04-4092-966a-7ed7d2116f71'                # Scene 1 ID
 scene2_id='1ae55392-cc04-4092-966a-7ed7d2116f72'                # Scene 2 ID
